# market-intelligence-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-market-intelligence.yml
config/: report_settings.yaml  sources.yaml  watchlist.yaml
reports/: market-intelligence-2026-06-16.json  market-intelligence-2026-06-16.md  market-intelligence-2026-06-17.json  market-intelligence-2026-06-17.md  market-intelligence-2026-06-18.json  market-intelligence-2026-06-18.md  market-intelligence-2026-06-19.json  market-intelligence-2026-06-19.md  market-intelligence-2026-06-22.json  market-intelligence-2026-06-22.md  market-intelligence-2026-06-23.json  market-intelligence-2026-06-23.md  market-intelligence-2026-06-24.json  market-intelligence-2026-06-24.md  market-intelligence-2026-06-25.json  market-intelligence-2026-06-25.md  market-intelligence-2026-06-26.json  market-intelligence-2026-06-26.md
src/: __init__.py  config.py  logging_config.py  main.py  models.py
src/analysis/: market_analysis.py  scoring.py
src/collectors/: http.py  interfaces.py  market_data.py  treasury.py
src/normalization/: validation.py
src/reporting/: charts.py  json_report.py  markdown.py
src/storage/: sqlite_store.py
tests/: test_market_provider.py  test_report_generation.py  test_scoring.py  test_treasury_provider.py  test_validation.py
